kube-cluster/prometheus-kube/monitoring-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.brauto-project.cc
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
    - host: prometheus.brauto-project.cc
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 8080
            path: /
